--- a/BlossomWebApi/appsettings.json
+++ b/BlossomWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=blossom;User=blossomuser;Password=Qazwsx#321;"
+    "DefaultConnection": "Server=localhost;Database=blossom;User=panicappuser;Password=8941l8U613Pa04985qBwNertMy;"
   },
   "Jwt": {
     "Key": "your_secret_key_here_that_should_be_long_and_secure",
