--- a/BlossomWebApi/appsettings.json
+++ b/BlossomWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=blossom;User=panicappuser;Password=8941l8U613Pa04985qBwNertMy;"
+    "DefaultConnection": "Server=sql8.cpt2.host-h.net;Database=blossom_sit;User=blossomadminuser;Password=blossomAdminUser321;"
   },
   "Jwt": {
     "Key": "your_secret_key_here_that_should_be_long_and_secure",
